assets/css/extended/custom.css
/* ------------------- */

body {
    font-size: 16px;
}

body.list {
    background: var(--theme);
}

:root {
    --main-width: 800px;
    --nav-width: 800px;
    --content-gap: 0.5rem;
}

nav.nav {
    padding-top: 1.25rem;
}

.main {
    min-height: unset;
    max-width: unset;
    padding: 0;
    margin: 0;
}

footer.footer {
    min-height: unset;
    max-width: unset;
}

body.list .main,
footer.footer > *,
.main article > * {
    width: 100%;
    max-width: calc(var(--main-width) + var(--gap) * 2);
    margin: 0 auto;
    padding: var(--gap);
}

.main .profile {
    min-height: 50vh;
}

p {
    margin-top: 1.375rem;
}


.post-content ol, .post-content ul {
    padding-inline-start: 2rem;
}

/* ------------------- */

html {
    height: 100%;
    margin: 0;
}

body {
    margin: 0;
    padding: 0;

    min-height: 100vh;
    display: flex;
    flex-direction: column;
    flex-grow: 1;

    align-items: stretch;
}

main {
    flex-grow: 1;
}

body,
h1,
h2,
h3,
h4,
h1 a,
h2 a,
h3 a,
h4 a {
    color: #202821;
    font-family: 'Lora', serif;
    font-optical-sizing: auto;
    font-style: normal;
    font-variation-settings:
            "wdth" 100;
}

.container {
    display: flex;
    flex-direction: column;

    width: 100%;
    max-width: 840px;
    margin: 0 auto;
    padding: 0 20px;
    box-sizing: border-box;
}

nav.main-nav {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: flex-start;

    padding: 0.75rem 0;
    margin: 1rem 0 0;
}

@media (min-width: 640px) {
    nav.main-nav {
        flex-direction: row;
    }
}

nav.main-nav ul {
    display: flex;

    flex-direction: column;
    align-items: flex-end;

    margin: 0;
    padding: 0;
}

@media (min-width: 640px) {
    nav.main-nav ul {
        flex-direction: row;
        align-items: baseline;
    }
}

nav.main-nav ul li {
    display: block;
}

nav.main-nav ul li + li {
    display: block;
}

@media (min-width: 640px) {
    nav.main-nav ul li + li {
        margin-left: 1.375rem;
    }
}

nav.main-nav ul li a,
nav.main-nav ul li a:visited {
    text-decoration: none;

    color: #202821;

    margin: 0.5em 0;
    font-weight: 600;
    font-size: 1.125rem;
}

nav.main-nav ul li.home a {
    font-size: 1.375rem;
}

.footer {
    padding: 1.25rem 0 1.5rem;
    margin: 1rem 0 0;

    background: #cfe6d2;
}

.about-me {
    display: flex;
    flex-direction: column;
    gap: 0.25rem;
}

.about-me .country {
    font-size: 0.75rem;

    margin-bottom: 0.25rem;
}

.about-me .me-link a,
.about-me .me-link a:visited {
    text-decoration: none;
    font-weight: bold;
    font-size: 0.875rem;

    color: #202821;
}

.flex-spacer {
    flex-grow: 1;
}

h1 {
    font-size: 1.75rem;
    margin: 2rem 0 1.5rem;
}

h1 .subtitle {
    display: block;
    font-size: 1rem;
    font-weight: 600;
    margin-top: 0.25rem;
}

h2 {
    margin: 1.25rem 0;
}

h2 a {
    text-decoration: none;
}

h3 a {
    text-decoration: none;
}

p {
    margin-bottom: 0.75rem;
}

li {
    margin: 0.5rem 0;
}

li li {
    margin: 0.375rem 0;
}

li li li {
    margin: 0.25rem;
}

main {
    overflow-x: hidden;
}

main article p  {
    overflow-wrap: break-word;
}

main article figure.page-image {
    display: block;

    margin: 0;
    padding: 1.25rem 2rem;
}

main article figure.page-image .inner-container {
    margin: auto;
    width: 540px;
    max-width: 100%;
    box-sizing: border-box;
}

main article figure.page-image .caption {
    margin-top: 0.5rem;
    font-size: 0.75rem;
    text-align: center;
}

main article img {
    max-width: 100%;
    height: auto;

    border-radius: 0.25rem;
    overflow: hidden;
}

main article .gallery {
    display: grid;
    grid-template-columns: 1fr 1fr;

    gap: 1rem;
    padding: 0.5rem 1rem;

    align-items: flex-start;
}

main article .gallery a {
    box-shadow: none;
}

main article .gallery figure.page-image {
    width: auto;
    box-sizing: border-box;
    height: auto;
    padding: 0;
}

main article .gallery figure.page-image .inner-container {
    width: auto;
    height: auto;
}

@media (min-width: 640px) {
    main article .gallery {
        grid-template-columns: 1fr 1fr 1fr;

        gap: 2rem;
        padding: 1rem 2rem;
    }
}

iframe[src*="youtube"] {
    aspect-ratio: 16 / 9;
    height: auto !important;
    max-width: 100% !important;
    border-radius: 1.25rem;
    overflow: hidden;
}

ul.generic-link-list {
    list-style-type: none;
    padding-left: 0;
}

.generic-link-list a,
.generic-link-list a:visited {
    font-weight: bold;
    text-decoration: none;
    color: #345c3c;
    display: block;
}

.generic-link-list a:hover,
.generic-link-list a:focus,
.generic-link-list a:visited:focus,
.generic-link-list a:visited:hover {
    color: #249c2f;
}

.generic-link-list a .subtitle,
.generic-link-list .subtitle {
    display: block;
    font-size: 0.9em;
    font-weight: bold;
    color: #6f9e78;
    margin-top: 0.25rem;
}

.generic-link-list a:hover .subtitle,
.generic-link-list a:focus .subtitle{
    color: #a8e1b5;
}

.generic-link-list  {
    margin-top: 2.25rem;
    margin-bottom: 2rem;
}

.generic-link-list li {
    margin-bottom: 1.5rem;
    padding-bottom: 0.5rem;
    border-bottom: 1px solid rgba(0,0,0,15%);
}

.generic-link-list li:after {
    content: "";
    display: block;
    clear: both;
}

.generic-link-list .cover-image {
    float: right;
    margin: 0 0 0.75rem 1rem;

    width: 100px;
    height: 75px;
    position: relative;
    border-radius: 8px;
    overflow: hidden;
}

.generic-link-list .cover-image:empty {
    display: none;
}

.generic-link-list li > *:last-child {
    margin-bottom: 0.875rem;
}

@media (min-width: 640px) {
    .generic-link-list .cover-image:empty {
        display: block;
    }
}

.generic-link-list .cover-image img {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    background: rgb(228, 228, 228);
}

.generic-link-list li .intro {
    margin-top: 0.25rem;

    font-size: 0.875rem;
}

.generic-link-list li .intro p {
    margin: 0;
}

.generic-link-list li .meta {
    margin-top: 0.425rem;

    font-size: 0.7rem;
    color: rgba(0,0,0,0.9);
}

.main article header.post-header {
    background: #F8FBF2;
    padding: 2rem 0;

    border-top: 1px solid #E0F0D0;
    border-bottom: 1px solid #E0F0D0;

    max-width: unset;
    margin-top: 1rem;
    margin-right: 0;
    margin-left: 0;
    margin-bottom: 1rem;
}

.main article header.post-header > * {
    max-width: calc(var(--main-width) + var(--gap) * 2);
    margin-left: auto;
    margin-right: auto;
    padding-left: var(--gap);
    padding-right: var(--gap);
}

article header .title-category {
    font-size: 1rem;
    margin-bottom: 0.375rem;
}

article header.post-header h1 {
    margin-top: 0;
    margin-bottom: 0;
}

article header .description {
    margin-top:  1rem;
}

article header.post-header .meta {
    margin-top: 1.2rem;
    margin-bottom: -0.5rem;
    font-size: 0.8rem;
    font-weight: bold;
    color: rgba(0,0,0,0.44);
}

